PLF-7302 : add min-width on left navigation item to avoid flicking effect on expand/collapse

--- a/platform-ui-skin/src/main/webapp/skin/less/platform/portlets/platformNavigation/UICompanyNavigationPortlet/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/platform/portlets/platformNavigation/UICompanyNavigationPortlet/Style.less
@@ -70,6 +70,7 @@
 		> li > a {
 			display: block;
             width: auto;
+            min-width: 200px;
             color: @plfNavigationColor;
             overflow: hidden;
             text-overflow: ellipsis;
